Se agregan hovers la tarjeta

--- a/nft-preview-card-component-main/index.html
+++ b/nft-preview-card-component-main/index.html
@@ -39,10 +39,20 @@
   <body>
     <main class="main">
       <article class="card">
-        <img
-          src="/nft-preview-card-component-main/images/image-equilibrium.jpg"
-          alt="Equilibrium"
-        />
+        <div class="images">
+          <img
+            class="logo"
+            src="/nft-preview-card-component-main/images/image-equilibrium.jpg"
+            alt="Equilibrium"
+          />
+          <img
+            class="view"
+            src="/nft-preview-card-component-main/images/icon-view.svg"
+            alt="view"
+          />
+          <div class="background"></div>
+        </div>
+
         <div class="card-info">
           <h2 class="card-info-title">Equilibrium #3429</h2>
           <p class="card-info-desc">
